OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Automation_Config__mdt/Onboarding_Automation_Config__mdt.object-meta.xml
<CustomObject>
    <label>Onboarding Automation Config</label>
    <pluralLabel>Onboarding Automation Config</pluralLabel>
</CustomObject>