OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Automation_Config__mdt/fields/Close_Days__c.field-meta.xml
<CustomField>
    <fullName>Close_Days__c</fullName>
    <label>Close Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>