OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Automation_Config__mdt/fields/Onboarding_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Lookup__c</fullName>
    <label>Onboarding Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>