OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Automation_Config__mdt/fields/Stale_Subject_Label__c.field-meta.xml
<CustomField>
    <fullName>Stale_Subject_Label__c</fullName>
    <label>Stale Subject Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>